# database-replication

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: docker-compose.yaml
src/: main.py
src/configs/: postgresql.conf
src/connectors/: sink-mjolnirdb-connector.json  sink-stormbreakerdb-connector.json  sinkConnector.json  source-thordb-connector.json  sourceConnector.json
src/pipe/: extraction.py  ingestion.py  orchestration.yml
src/scripts/: getPlugins.sh  initConnectors.sh  initdb.sh
src/sinarm_dbt/: .user.yml  dbt_project.yml  profiles.yml
src/sinarm_dbt/macros/: generate_identity_column.sql  replace_empty.sql
src/sinarm_dbt/models/: schema.yml  source.yml
src/sinarm_dbt/models/refined/: dim_abrangencia.sql  dim_calibre.sql  dim_categoria.sql  dim_especie_arma.sql  dim_genero.sql  dim_marca.sql  dim_municipio.sql  dim_ocorrencia.sql  dim_status.sql  dim_tipo_porte.sql  dim_uf.sql  fat_ocorrencia.sql  fat_portes.sql  fat_registros.sql
src/sinarm_dbt/models/staging/: stg_ocorrencias.sql  stg_portes.sql  stg_registros.sql
tests/: Data.ipynb
